# val3ditypy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
docs/: cmake_example.rst
examples/: 02.json  example_cityjson.py  example_indoorgml.py  example_tu3djson.py
src/: pybind11_json.hpp  val3ditypy.cpp
